Set file input to width of 100% to avoid overflowing on mobile view

--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,7 @@ input.form-control {
   font-size: 16px;
 }
 
+input[type=file] {
+  width: 100%;
+}
+
